# flightdata

./: .gitignore  CONTRIBUTING.md  README.md  api.py  db_schema.py  flight_data_updater.py  main.py  pyproject.toml  token_manager.py
.github/: copilot-instructions.md
backend/: auth.py  users.py
backend/services/: flight_route.py
flightui/: package-lock.json  package.json
flightui/app/: layout.tsx
flightui/app/(auth)/login/: page.tsx
flightui/app/(auth)/register/: page.tsx
flightui/app/components/: FlightMap.tsx
flightui/app/dashboard/: page.tsx
flightui/app/lib/: api.ts  auth-context.tsx
