[project]
name = "flightdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.0",
    "python-dotenv>=1.2.2",
]
